--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
 </head>
 <body>
- <h1>my first websit</h1>
- <p>I am very happy for this site</p>
- <P>My brother help me very much</P>
+    <h1>My first website</h1>
+    <h3>Look mama I am very happy</h3>
+    
 </body>
 </html>
