--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>My first website</h1>
     <h3>Look mama I am very happy</h3>
     <h5>My eldar brother help me very much.</h5>
-    
+    <h6>I want to update my life style</h6>
 </body>
 </html>
